src/styles/code.css
.gatsby-highlight-code-line {
    background-color: #242933;
    display: block;
    margin-right: -1rem;
    margin-left: -1rem;
    padding-right: 1rem;
    padding-left: 0.75rem;
    border-left: 0.25rem solid #B48EAD;
}

/**
 * Add back the container background-color, border-radius, padding, margin
 * and overflow that we removed from <pre>.
 */
.gatsby-highlight {
    background-color: #2E3440;
    border-radius: 0.3rem;
    margin: 0.5rem 0 1.45rem 0;
    padding: 1rem;
    overflow: auto;
}

/**
 * Remove the default PrismJS theme background-color, border-radius, margin,
 * padding and overflow.
 * 1. Make the element just wide enough to fit its content.
 * 2. Always fill the visible space in .gatsby-highlight.
 * 3. Adjust the position of the line numbers
 */
.gatsby-highlight pre[class*="language-"] {
    background-color: transparent;
    margin: 0;
    padding: 0;
    overflow: visible;
    float: left; /* 1 */
    min-width: 100%; /* 2 */
}


/*
 Adapted from Solarized Color Schemes originally by Ethan Schoonover
 http://ethanschoonover.com/solarized

 Ported for PrismJS by Hector Matos
 Website: https://krakendev.io
 Twitter Handle: https://twitter.com/allonsykraken)
*/

/*
SOLARIZED HEX
--------- -------
base03    #002b36
base02    #073642
base01    #ECEFF4
base00    #D8DEE9
base0     #839496
base1     #8399AF
base2     #eee8d5
base3     #2E3440
yellow    #88C0D0
orange    #cb4b16
red       #dc322f
magenta   #d33682
violet    #6c71c4
blue      #B48EAD
cyan      #A3BE8C
green     #B48EAD
*/

code[class*="language-"],
pre[class*="language-"] {
    color: #D8DEE9; /* base00 */
    font-family: "Source Code Pro", monospace;
    font-size: 1em;
    text-align: left;
    white-space: pre;
    word-spacing: normal;
    word-break: normal;
    word-wrap: normal;

    line-height: 1.4;

    -moz-tab-size: 4;
    /*noinspection CssBrowserCompatibilityForProperties*/
    tab-size: 4;

    -webkit-hyphens: none;
    -moz-hyphens: none;
    -ms-hyphens: none;
    hyphens: none;
}

pre[class*="language-"]::-moz-selection, pre[class*="language-"] ::-moz-selection,
code[class*="language-"]::-moz-selection, code[class*="language-"] ::-moz-selection {
    background: #9499a5;
}

pre[class*="language-"]::selection, pre[class*="language-"] ::selection,
code[class*="language-"]::selection, code[class*="language-"] ::selection {
    background: #9499a5;
}

/* Code blocks */
pre[class*="language-"] {
    padding: 1em;
    margin: .5em 0;
    overflow: auto;
    border-radius: 0.3em;
}

:not(pre) > code[class*="language-"],
pre[class*="language-"] {
    background-color: #2E3440;
}

/* Inline code */
:not(pre) > code[class*="language-"] {
    padding: 0.05em 0.15em;
    border-radius: .1em;
    background: #3B4252;
    text-decoration: inherit;   /* White underline for links: */
    display: inline-block;      /* White underline for links: */
}

.token.comment,
.token.prolog,
.token.doctype,
.token.cdata {
    color: #889eb5;
}

.token.punctuation {
    color: #ECEFF4;
}

.namespace {
    opacity: .7;
}

.token.property,
.token.tag,
.token.number,
.token.constant,
.token.symbol,
.token.deleted {
    color: #B48EAD; /* blue */
}

.token.selector,
.token.attr-name,
.token.string,
.token.char,
.token.builtin,
.token.url,
.token.inserted {
    color: #A3BE8C;
}

.token.entity {
    color: #D8DEE9;
    background: #eee8d5;
}

.token.atrule,
.token.attr-value,
.token.boolean,
.token.keyword {
    color: #81A1C1;
}

.token.function,
.token.class-name {
    color: #88C0D0;
}

.token.regex,
.token.important,
.token.variable {
    color: #EBCB8B;
}

.token.important,
.token.bold {
    font-weight: bold;
}
.token.italic {
    font-style: italic;
}
.token.entity {
    cursor: help;
}

